pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constModule3.pkl
const foo = new {
  x = module
}
